fix: StretchLayout layout bug

--- a/src/lib/StretchLayout.scss
+++ b/src/lib/StretchLayout.scss
@@ -5,6 +5,7 @@
   &[data-direction='horizontal'] {
     grid-auto-flow: column;
     grid-template-columns: var(--skel-StretchLayout_template);
+    width: 100%;
   }
 
   &[data-direction='vertical'] {
