feat: add Button component and page

--- a/src/lib/common.scss
+++ b/src/lib/common.scss
@@ -1,3 +1,24 @@
 :root {
+  --skel-background-color: oklch(100% 0 0);
+  --skel-inverted-text-color: oklch(100% 0 0);
   --skel-primary-color: oklch(59% 0.17 255.4);
+  --skel-primary-inverted-background-hover-color: oklch(64% 0.15 255.4);
+  --skel-primary-inverted-background-active-color: oklch(69% 0.13 255.4);
+  --skel-primary-background-color: oklch(99% 0.01 255.4);
+  --skel-primary-background-hover-color: oklch(97% 0.02 255.4);
+  --skel-primary-background-active-color: oklch(95% 0.04 255.4);
+  --skel-placeholder-text-color: oklch(70% 0 0);
+  --skel-disabled-input-background-color: oklch(96% 0 0);
+  --skel-clickable-hover-background-color: oklch(97% 0 0);
+  --skel-clickable-active-background-color: oklch(95% 0 0);
+  --skel-error-color: oklch(55% 0.2 30);
+  --skel-success-color: oklch(55% 0.2 150);
+  --skel-input-border-color: oklch(82% 0 0);
+  --skel-input-border-radius: 0.3em;
+  --skel-one-input-height: 2.5em;
+
+  --skel-dropdown-z-index: 500;
+  --skel-popover-z-index: 500;
+  --skel-modal-z-index: 1000;
+  --skel-tooltip-z-index: 1500;
 }
