--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,12 @@
 .sidebar {
+  box-sizing: border-box;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .main {
+  box-sizing: border-box;
+  height: 100%;
   padding: 1rem 4rem;
+  overflow-y: auto;
 }
