--- a/src/lib/LayerLayout.scss
+++ b/src/lib/LayerLayout.scss
@@ -1,14 +1,14 @@
-.skel-OverlayLayout_root {
+.skel-LayerLayout_root {
   position: relative;
   width: max-content;
 }
 
-.skel-OverlayLayout_overlay {
+.skel-LayerLayout_non-base-layer {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  
+
   pointer-events: none;
 }
