--- a/src/lib/Divider.scss
+++ b/src/lib/Divider.scss
@@ -4,7 +4,7 @@
 }
 
 .skel-Divider_root {
-  background-color: var(--skel-Divider_color);
+  background: var(--skel-Divider_color);
 
   &[data-direction='horizontal'] {
     width: 100%;
