feat: improve Popover shadow

--- a/src/lib/Popover.scss
+++ b/src/lib/Popover.scss
@@ -17,5 +17,5 @@
 .skel-Popover_popover-frame {
   background-color: var(--skel-background-color);
   border-radius: 0.4em;
-  box-shadow: 0 1px 4px oklch(75% 0 0);
+  box-shadow: 0 2px 8px oklch(0% 0 0 / 20%);
 }
