--- a/src/lib/Popover.scss
+++ b/src/lib/Popover.scss
@@ -18,4 +18,6 @@
   background-color: var(--skel-background-color);
   border-radius: 0.4em;
   box-shadow: 0 2px 8px oklch(0% 0 0 / 20%);
+
+  overflow: auto;
 }
