feat: improve selected option's css

--- a/src/lib/Select.scss
+++ b/src/lib/Select.scss
@@ -40,8 +40,6 @@
 .skel-Select_option {
   display: flex;
   align-items: center;
-  gap: 0.3em;
-
   padding: 0 0.8em;
   box-sizing: border-box;
   height: 2.5em;
@@ -55,16 +53,17 @@
   &:active {
     background-color: oklch(94% 0 0);
   }
-}
 
-.skel-Select_selected-icon {
-  visibility: hidden;
+  &.skel-Select_selected {
+    background-color: var(--skel-primary-selected-background-color);
+    color: var(--skel-primary-color);
 
-  .skel-Select_selected & {
-    visibility: visible;
-  }
+    &:hover {
+      background-color: var(--skel-primary-selected-background-hover-color);
+    }
 
-  .skel-Select_no-selected-option & {
-    display: none;
+    &:active {
+      background-color: var(--skel-primary-selected-background-active-color);
+    }
   }
 }
