--- a/src/lib/common.scss
+++ b/src/lib/common.scss
@@ -4,6 +4,9 @@
   --skel-primary-color: oklch(59% 0.17 255.4);
   --skel-primary-inverted-background-hover-color: oklch(64% 0.15 255.4);
   --skel-primary-inverted-background-active-color: oklch(69% 0.13 255.4);
+  --skel-primary-selected-background-color: oklch(98% 0.02 255.4);
+  --skel-primary-selected-background-hover-color: oklch(96% 0.03 255.4);
+  --skel-primary-selected-background-active-color: oklch(94% 0.04 255.4);
   --skel-primary-background-color: oklch(99% 0.01 255.4);
   --skel-primary-background-hover-color: oklch(97% 0.02 255.4);
   --skel-primary-background-active-color: oklch(95% 0.04 255.4);
