--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,6 @@
 .sidebar {
+  padding-top: 2rem;
+  padding-bottom: 8rem;
   box-sizing: border-box;
   height: 100%;
   overflow-y: auto;
@@ -7,6 +9,6 @@
 .main {
   box-sizing: border-box;
   height: 100%;
-  padding: 1rem 4rem;
+  padding: 1rem 4rem 10rem;
   overflow-y: auto;
 }
