feat: customize Checkbox design

--- a/src/lib/Checkbox.scss
+++ b/src/lib/Checkbox.scss
@@ -1,3 +1,10 @@
+@use 'utility/utility.scss';
+
+:root {
+  --skel-Checkbox_checkbox-size: 1.2em;
+  --skel-Checkbox_check-size: 1.2em;
+}
+
 .skel-Checkbox_root {
   display: inline-grid;
   grid-template-columns: auto minmax(0, 1fr);
@@ -14,10 +21,42 @@
 }
 
 .skel-Checkbox_checkbox {
+  appearance: none;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: utility.toEvenPx(var(--skel-Checkbox_check-size));
+  height: utility.toEvenPx(var(--skel-Checkbox_check-size));
+  border-radius: 0.25em;
   margin: 0;
-  accent-color: var(--skel-primary-color);
+  border: 1px solid oklch(84% 0 0);
+  background-color: white;
 
   cursor: pointer;
+
+  transition: all 140ms ease-out;
+
+  &::before {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 0;
+
+    background-color: white;
+    mask: url('/src/check-bold.svg') no-repeat center;
+    mask-size: contain;
+  }
+
+  &:checked {
+    background-color: var(--skel-primary-color);
+
+    &::before {
+      width: utility.toEvenPx(var(--skel-Checkbox_check-size));
+      height: utility.toEvenPx(var(--skel-Checkbox_check-size));
+    }
+  }
 
   .skel-Checkbox_disabled & {
     cursor: default;
