feat: resizable sidebar

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,9 +1,14 @@
 .sidebar {
+  // Required to display scrollbar properly.
+  overflow: hidden;
+}
+
+.sidebarContent {
   padding-top: 2rem;
   padding-bottom: 8rem;
   box-sizing: border-box;
   height: 100%;
-  overflow-y: auto;
+  overflow: hidden auto;
 }
 
 .main {
